# sentinel-logger

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  QA_TEST_REPORT.md  README.md  com.sentinel-logger.server.plist  config.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh
.claude/: CLAUDE.md
app/: __init__.py  utils.py
app/models/: __init__.py  saved_query.py
app/routes/: __init__.py  api.py  views.py
app/services/: __init__.py  ai_agent.py  analytics.py  bug_report_generator.py  camera_downloader.py  event_detector.py  flow_detector.py  intelligent_search.py  issue_detector.py  log_analyzer.py  log_parser.py  s3_downloader.py  section_analyzer.py  smart_analyzer.py  version_checker.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: analyze.html  analyze_simple.html  base.html  bug_report.html  bug_reports.html  camera_download.html  charts.html  compare.html  create_bug_jira.html  create_bug_report.html  dashboard.html  db_viewer.html  index.html  issue_detail.html  issues.html  json_formatter.html  json_viewer.html  live_stream.html  log_viewer.html  s3_download.html  simple_analyze.html  simple_base.html  simple_index.html  upload.html
app/templates/errors/: 403.html  404.html  413.html  500.html
tests/: conftest.py  security_report.md  test_api.py  test_bug_report_generator.py  test_issue_detector.py  test_log_parser.py  test_models.py  test_views.py
